; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/repair/extr_checkindex.c_cidxConnect.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/repair/extr_checkindex.c_cidxConnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@SQLITE_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [106 x i8] c"CREATE TABLE xyz( errmsg TEXT, current_key TEXT, index_name HIDDEN, after_key HIDDEN, scanner_sql HIDDEN)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8**, i32**, i8**)* @cidxConnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cidxConnect(i32* %0, i8* %1, i32 %2, i8** %3, i32** %4, i8** %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i8**, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8** %3, i8*** %10, align 8
  store i32** %4, i32*** %11, align 8
  store i8** %5, i8*** %12, align 8
  %15 = load i32, i32* @SQLITE_OK, align 4
  store i32 %15, i32* %13, align 4
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @sqlite3_declare_vtab(i32* %16, i8* getelementptr inbounds ([106 x i8], [106 x i8]* @.str, i64 0, i64 0))
  store i32 %17, i32* %13, align 4
  %18 = call %struct.TYPE_3__* @cidxMalloc(i32* %13, i32 8)
  store %struct.TYPE_3__* %18, %struct.TYPE_3__** %14, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %20 = icmp ne %struct.TYPE_3__* %19, null
  br i1 %20, label %21, label %25

21:                                               ; preds = %6
  %22 = load i32*, i32** %7, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  store i32* %22, i32** %24, align 8
  br label %25

25:                                               ; preds = %21, %6
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %27 = bitcast %struct.TYPE_3__* %26 to i32*
  %28 = load i32**, i32*** %11, align 8
  store i32* %27, i32** %28, align 8
  %29 = load i32, i32* %13, align 4
  ret i32 %29
}

declare dso_local i32 @sqlite3_declare_vtab(i32*, i8*) #1

declare dso_local %struct.TYPE_3__* @cidxMalloc(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
